fix: project action button positioning and visibility improvement

--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@ a:active {
   --background-color: #fff;
   --foreground-color: #313131;
   --border-color: #d1d1d1;
-  --background-gradient-color: #ffffff29;
+  --background-gradient-color: #ffffff64;
   --background-button-color: #f3f3f3;
 }
 
@@ -79,6 +79,6 @@ a:active {
   --background-color: #1c1c1c;
   --foreground-color: #ffffff;
   --border-color: #393939;
-  --background-gradient-color: #1c1c1c29;
+  --background-gradient-color: #1c1c1c64;
   --background-button-color: #0c0c0c;
 }
